fix bug with spacing in collapse

--- a/app/frontend/stylesheets/custom.scss
+++ b/app/frontend/stylesheets/custom.scss
@@ -245,9 +245,7 @@
 }
 
 .collapse-content br {
-  content: "";
-  display: block;
-  margin: 0.3rem 0;
+  margin: 0.1rem 0;
 }
 
 .rails-default-error-page {
